--- a/static/styles.css
+++ b/static/styles.css
@@ -10,7 +10,7 @@
 body {
   padding: 10% 5%;
   background: #0f2027;
-  background: linear-gradient(258deg, #6e2baf, #25948b);
+  background-image: linear-gradient(337deg, #3f73f8, #c2cd94);
   justify-content: center;
   align-items: center; 
   height: 100vh;
@@ -154,6 +154,11 @@ body {
 .right {
   right: 0px;
   width: 300px; 
+}
+
+.link-styling{
+  color: white;
+  text-decoration: none;
 }
 
 @media (max-width: 576px) { 
